# swiftdns

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs
.github/: CONTRIBUTING.md
.github/hooks/: pre-commit  prepare-commit-message  prepare-commit-msg
.github/workflows/: test.yml
assets/: .metadata.sh  README.md  config.toml  default-config.toml  whitelist.txt
assets/filters/: meta.list  microsoft.list  nsfw.list  reddit.list  twitter.list  whitelist.list
assets/systemd/: swiftdns.service
conf.d/: default-config.toml
debian/: postinst  service
lists/: README.md  microsoft.txt  reddit.txt  twitter.txt
rules/: README.md  google.txt  meta.txt  nsfw.txt  tiktok.txt  twitter.txt
scripts/: install.sh
src/: cache.rs  cli.rs  client.rs  config.rs  dns.rs  domain.rs  filter.rs  listener.rs  macros.rs  main.rs
src/dns/: mod.rs  resolver.rs
src/http/: client.rs  mod.rs  tor.rs
